# orange-tools

./: .gitignore  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
benchmark23/: test_kmeans.py  test_simpletree.py  test_svm.py
error_reporting/: Orange_error_reporting.ipynb
postgres/: Dockerfile  README.md  install_extensions.sql
tools/: convert-to-indexed.sh  datasets-info-check.py  datasets-info-create.py  remove-recent-files.py  showWorkflow.py  stamper.py  tinify_images.py  todo-template.css  todo.py  trim.py  widget_icon_export.py
